Add intermission note publishing flow
